DeviceStats for weekly & monthly drilldowns

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
@@ -33,7 +33,8 @@
                    '@Url.Action("CampaignPerfData", "SearchReports")',
                    @(Model.SearchProfile.ShowRevenue ? "CreateSummaryGrid" : "CreateSummaryGridLeadGen"),
                    @(Model.SearchProfile.ShowCalls ? "true" : "false"),
-                   '@(Model.SearchProfile.ShowRevenue ? "revenue" : "clicks")'
+                   '@(Model.SearchProfile.ShowRevenue ? "revenue" : "clicks")',
+                   18
                    );
     };
 
