--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
@@ -32,11 +32,11 @@
         var weeksumDS = CreateSummaryDataSource('@Url.Action("WeekSumData", "SearchReports")', null, false, 'nosort', 0);
 
     @if (Model.SearchProfile.ShowRevenue) {
-        <text>CreateSummaryGrid(weeksumDS, $('#weeksumGrid'), 300, 'Week', 10, 2, true, false, false, null);</text>
+        <text>CreateSummaryGrid(weeksumDS, $('#weeksumGrid'), 300, 'Week', 10, 2, true, false, false, DetailInitWrapperWM);</text>
         <text>CreateRevROASChart(weeksumDS, 'weekleftChart', 'Weekly Revenue vs. ROAS Performance');</text>
         <text>CreateOrderCPOChart(weeksumDS, 'weekrightChart', 'Weekly Orders vs. CPO Performance');</text>
     } else {
-        <text>CreateSummaryGridLeadGen(weeksumDS, $('#weeksumGrid'), 300, 'Week', 10, 2, true, false, false, null, @(Model.SearchProfile.ShowCalls ? "true" : "false"));</text>
+        <text>CreateSummaryGridLeadGen(weeksumDS, $('#weeksumGrid'), 300, 'Week', 10, 2, true, false, false, DetailInitWrapperWM, @(Model.SearchProfile.ShowCalls ? "true" : "false"));</text>
         <text>CreateCTRCPCChart(weeksumDS, 'weekleftChart', 'Weekly CTR vs. CPC Performance');</text>
         if (Model.SearchProfile.ShowCalls) {
             <text>CreateLeadsCPLChart(weeksumDS, 'weekrightChart', 'Weekly TotalLeads vs. CPL Performance', 'TotalLeads');</text>
@@ -46,6 +46,16 @@
     }
         weeksumDS.read();
     });
+
+    function DetailInitWrapperWM(e) {
+        DetailInit(e,
+                   '@Url.Action("DeviceData", "SearchReports")',
+                   @(Model.SearchProfile.ShowRevenue ? "CreateSummaryGrid" : "CreateSummaryGridLeadGen"),
+                   @(Model.SearchProfile.ShowCalls ? "true" : "false"),
+                   'title',
+                   11
+                   );
+    };
 
     function ExportWeekSumCSV() {
         window.location.href = '@Url.Action("WeekSumExport", "SearchReports")';
