--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -25,6 +25,16 @@
       +--------------------------------------+-->*@
 <div class="row fullWidth">
     <div class="grayband">
+        @*<!--+---------------+
+              | Top Tabs      |
+              +---------------+-->*@
+        <dl class="tabs" data-tab>
+            <dd class="active"><a href="#repSumTab" id="repNav_Summary">Summary</a></dd>
+            <dd><a href="#repCreativeTab" id="repNav_Creative">Creative</a></dd>
+            <dd><a href="#repWeeklyTab" id="repNav_Weekly">Weekly</a></dd>
+            <dd><a href="#repMonthlyTab" id="repNav_Monthly">Monthly</a></dd>
+        </dl>
+        <!-- /ReportsHTabs  -->
     </div>
 </div>
 <!-- /GrayBandForHTabs -->
@@ -34,76 +44,24 @@
       +--------------+-->*@
 <div class="row fullWidth" id="main">
 
-    @*<!--+---------+
-          | Sidebar |
-          +---------+-->*@
-    <div class="portaltabs-v">
-
-        @*<!--+---------------+
-              | Vertical Tabs |
-              +---------------+-->*@
-        <dl class="vertical tabs" data-tab>
-            <dd class="active"><a href="#mainReportsTab" id="mainNav_Reports">Reports</a></dd>
-            <dd><a href="#mainSampleTab" id="mainNav_Sample">Sample - Daily</a></dd>
-        </dl>
-        <!-- /VTabs -->
-
-        @*Html.Partial("_MainContacts")*@
-
+    @*<!--+------------------------+
+          | Reports HTabs Content  |
+          +------------------------+-->*@
+    <div class="tabs-content">
+        <div id="repSumTab" class="content active">
+            <div id="divSummary" style="padding:10px"></div>
+        </div>
+        <div id="repCreativeTab" class="content">
+            <div id="divCreative" style="padding:10px"></div>
+        </div>
+        <div id="repWeeklyTab" class="content">
+            <div id="divWeekly" style="padding:10px"></div>
+        </div>
+        <div id="repMonthlyTab" class="content">
+            <div id="divMonthly" style="padding:10px"></div>
+        </div>
     </div>
-    <!-- /Sidebar -->
-
-    @*<!--+---------------+
-          | VTabs Content |
-          +---------------+-->*@
-    <ul class="tabs-content">
-
-        @*<!--+----------
-              | Reports VTab
-              +------------>*@
-        <li id="mainReportsTab" class="content active">
-            <div class="portaltabs-h">
-
-                @*<!--+----------------+
-                      | Reports HTabs  |
-                      +----------------+-->*@
-                <dl class="tabs" data-tab>
-                    <dd class="active"><a href="#repSumTab" id="repNav_Summary">Summary</a></dd>
-                    <dd><a href="#repCreativeTab" id="repNav_Creative">Creative</a></dd>
-                    <dd><a href="#repWeeklyTab" id="repNav_Weekly">Weekly</a></dd>
-                    <dd><a href="#repMonthlyTab" id="repNav_Monthly">Monthly</a></dd>
-                </dl>
-                <!-- /ReportsHTabs  -->
-
-                @*<!--+------------------------+
-                      | Reports HTabs Content  |
-                      +------------------------+-->*@
-                <div class="tabs-content">
-                    <div id="repSumTab" class="content active">
-                        <div id="sumNotLoaded"></div>
-                    </div>
-                    <div id="repCreativeTab" class="content"></div>
-                    <div id="repWeeklyTab" class="content"></div>
-                    <div id="repMonthlyTab" class="content"></div>
-                </div>
-                <!-- /ReportsContent  -->
-
-            </div>
-        </li>
-        <!-- /Reports   -->
-
-        @*<!--+----------
-              | Sample VTab
-              +------------>*@
-        <li id="mainSampleTab" class="content">
-            <div id="sampleTab">
-                Loading...
-            </div>
-        </li>
-        <!-- /Sample  -->
-
-    </ul>
-    <!-- /VTabs Content -->
+    <!-- /ReportsContent  -->
 
 </div>
 <!-- /MainContent -->
@@ -115,7 +73,7 @@
     <div class="large-12 columns">
         <div class="row">
             <div class="large-6 columns">
-                <p>&copy; 2014 Direct Agents</p>
+                <p>&copy; 2015 Direct Agents</p>
             </div>
             <div class="large-6 columns">
             </div>
@@ -150,7 +108,6 @@
         });
 
         function WindowResize() {
-            ResizeChart('sample', true);
             ResizeChart('summary', true);
             ResizeChart('creativeBar', true);
             ResizeChart('creativeScatter', true);
@@ -176,7 +133,7 @@
                 data: { metric1: "Spend", metric2: "Conversions" },
                 cache: false
             }).done(function (html) {
-                $('#repSumTab').html(html);
+                $('#divSummary').html(html);
             });
         }
 
@@ -192,8 +149,6 @@
             $('#repNav_Creative').click(function () { CheckLoadCreative(); });
             $('#repNav_Weekly').click(function () { CheckLoadWeekly(); });
             $('#repNav_Monthly').click(function () { CheckLoadMonthly(); });
-
-            $('#mainNav_Sample').click(function () { CheckLoadSample(); });
         }
 
         function CheckLoadCreative() {
@@ -202,7 +157,7 @@
                     url: '@Url.Action("Creative", "Reports")',
                     cache: false
                 }).done(function (html) {
-                    $('#repCreativeTab').html(html);
+                    $('#divCreative').html(html);
                     ResizeChart('creativeBar', false);
                     ResizeChart('creativeScatter', false);
                     //SetupCreativeGrid();
@@ -218,7 +173,7 @@
                     url: '@Url.Action("Weekly", "Reports")',
                     cache: false
                 }).done(function (html) {
-                    $('#repWeeklyTab').html(html);
+                    $('#divWeekly').html(html);
                 });
             } else {
                 setTimeout(function () { ResizeChart('tdWeekly', true); }, 100);
@@ -230,23 +185,10 @@
                     url: '@Url.Action("Monthly", "Reports")',
                     cache: false
                 }).done(function (html) {
-                    $('#repMonthlyTab').html(html);
+                    $('#divMonthly').html(html);
                 });
             } else {
                 setTimeout(function () { ResizeChart('tdMonthly', true); }, 100);
-            }
-        }
-
-        function CheckLoadSample() {
-            if ($('#sampleChart').length == 0) {
-                $.ajax({
-                    url: '@Url.Action("Sample", "Reports")',
-                    cache: false
-                }).done(function (html) {
-                    $('#sampleTab').html(html);
-                });
-            } else {
-                setTimeout(function () { ResizeChart('sample', true); }, 100);
             }
         }
 
