--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Monthly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Monthly.cshtml
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" style="margin-top: 5px">
     <div class="large-12 columns">
         <div id="tdMonthlyChartSection" class="k-content">
             <div class="chart-wrapper">
