--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Monthly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Monthly.cshtml
@@ -3,8 +3,10 @@
 <div class="row">
     <div class="large-12 columns">
         <div id="tdMonthlyOuter">
-            <b>Monthly Summary</b>
-            <a class="button paddedbutton" style="float: right" href="#" onclick="ExportMonthlyCSV(); return false">Export CSV</a>
+            <div style="height:26px">
+                <b style="font-size:20px">Monthly Summary</b>
+                <button id="btnExportMonthly" class="k-primary" style="float:right;margin:0 5px" onclick="ExportMonthlyCSV()">Export CSV</button>
+            </div>
             <div id="tdMonthlyGrid" style="margin-top: 10px"></div>
         </div>
     </div>
@@ -29,8 +31,8 @@
 } else {
         <text>CreateImpressionsClicksChart(monthlyDS, 'tdMonthlyChart', 'Monthly Impresions vs. Clicks Performance');</text>
 }
-
         monthlyDS.read();
+        $('#btnExportMonthly').kendoButton();
     });
 
     function ExportMonthlyCSV() {
