--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/TradingDeskAccounts.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/TradingDeskAccounts.cshtml
@@ -13,7 +13,8 @@
 <table border="1">
     <tr>
         <th></th>
-        <th>Account</th>
+        <th>Id</th>
+        <th>Name</th>
         <th>Login</th>
         <th>ShowConv?</th>
         <th>FixedMetric</th>
@@ -23,17 +24,11 @@
 {
     <tr>
         <td>@Ajax.ActionLink("Edit", "EditAccount", new { tdaId = tda.TradingDeskAccountId }, ajaxOptions)</td>
-        <td>
-            @if (tda.AdRollProfiles.Count() > 0) {
-                @(String.Join(", ", tda.AdRollProfiles.Select(a => a.Name).ToArray()))
-            }
-            @if (tda.InsertionOrders.Count() > 0) {
-                @(String.Join(", ", tda.InsertionOrders.Select(i => i.InsertionOrderName).ToArray()))
-            }
-        </td>
+        <td>@tda.TradingDeskAccountId</td>
+        <td>@tda.DisplayName</td>
         <td>
             @if (tda.UserProfiles.Count() > 0) {
-                @(String.Join(", ", tda.UserProfiles.Select(u => u.UserName).ToArray()))
+                @tda.Login
             } else { // hide this?
                 @Ajax.ActionLink("create", "CreateUserProfile", new { tdaId = tda.TradingDeskAccountId }, ajaxOptions)
             }
