--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/EditAccount.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/EditAccount.cshtml
@@ -21,7 +21,7 @@
                     <td>@Html.DisplayFor(m => m.DisplayName)</td>
                 </tr>
                 <tr>
-                    <td>@Html.LabelFor(m => m.Login)</td>
+                    <td>@Html.LabelFor(m => m.Login, "Login:")</td>
                     <td>@Html.DisplayFor(m => m.Login)</td>
                 </tr>
                 <tr>
